Changelog
=========

0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2011-01-31)
----------------

- Added new renaming script: ``remove_accentuation``.
- Now depends on ``rbco.rename`` version ``>=0.3``. Previously was ``>=0.2``.


0.1 (2010-08-31)
----------------

- Initial release
