@@ -4,7 +4,8 @@ Changelog
 0.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Now the ``rbco_nautilusscirpts_install`` script correctly locates the installed scripts, instead 
+  of just assuming they were on ``/usr/bin``.
 
 
 0.2 (2011-01-31)
